# proofassistant

./: CHANGELOG.md  logic.hs  proof.hs  proofassistant.cabal
app/: Gui.hs  Logic.hs  Main.hs  Parser.hs  Proof.hs
