cabal-version:      2.4
name:               proofassistant
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Simple first-order logic proof assistant.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mikołaj Swoboda
maintainer:         331319@uwr.edu.pl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proofassistant
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Logic, 
                      Proof,
                      Parser ,
                      Gui

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedLabels, OverloadedStrings
    build-depends:    base ^>=4.16.4.0,
    		          gi-gtk,
                      gi-gdk,
    		          haskell-gi-base,
                      containers,
                      parsec,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
